syntax = "proto3";

import "google/protobuf/timestamp.proto";

message TaskId {
  uint32 id = 1;
}

message Task {
  enum Priority {
    NONE = 0;
    LOW = 1;
    MEDIUM = 2;
    HIGH = 3;
  }
  string title = 1;
  Priority priority = 2;
  google.protobuf.Timestamp due_date = 3;
  bool completed = 4;
  string label = 5;
}

message TaskTransfer {
  TaskId task_id = 1;
  Task task = 2;
  TaskId parent_id = 3;
}